some color chnged

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           <br>
           <br>
           Upon my arrival in Germany, in 2017 I have studied web-development in a bootcamp for more than one year, 
-          in parallel with my studies I have set up myown online business 'www.melkamethiopia.com' in 2020. During my
+          in parallel with my studies, I have set up myown online business 'www.melkamethiopia.com' in 2020. During my
           time in the bootcamp, I have studied HTML, CSS, JAVASCRIPT, REACT, NODEJS AND DATABASES such us MONGODB AND
           MYSQL. In addition to that, I have studied various frameworks by myself. 
           <br>
@@ -62,7 +62,7 @@
           condition with a daily meetup and ticketing system that we have applied on our day to day activity.
         <br>
         <br>
-          Since I always enjoy teaching and explaining furthermore, since I have a long year of teaching experiecne
+          Since I always enjoy teaching and explaining, furthermore, considering that I have a long year of teaching experiecne
           I have started voluneering as a web-development teacher since September 2022 in ReDI School of Digital 
           Integration. Currently, I am teacing JAVASCRIPT courses two times a week in this school.
        
