--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- 2 -->
     <div class="text">
         <div class="text-wrap">
-            <h2 style="color: darkgreen;">
+            <h2 style="color: darkslategray;">
                 Language teacher turned full stack web developer. More than seven years of teaching experience, 
                 currently teaching coding to beginners ...
             </h2>
