--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           <br>
           <br>
           Upon my arrival in Germany, in 2017 I have studied web-development in a bootcamp for more than one year, 
-          in parallel with my studies, I have set up myown online business 'www.melkamethiopia.com' in 2020. During my
+          in parallel with my studies, I have set up myown online business https://www.melkamethiopia.com in 2020. During my
           time in the bootcamp, I have studied HTML, CSS, JAVASCRIPT, REACT, NODEJS AND DATABASES such us MONGODB AND
           MYSQL. In addition to that, I have studied various frameworks by myself. 
           <br>
