text changed and styled

--- a/about.html
+++ b/about.html
@@ -43,28 +43,15 @@
       <!-- about me -->
 
       <div class="aboutme">
-          My name is Ashenafi Shiferaw, I am a Berlin based web developer. I have a permanent residence permit and 
-          work permit in Germany. I have been living in Germany since 2017. In my previous educational and work life
-          I have studied Banking and finance, then, I have studied till master foreing language and pedagogy mainly in
-          french in France. Since then (2011) till 2017 I have been working as a french language teacher and translator
-          in various institues. 
+        I am a Berlin based web developer with a permanent residence and work permit in Germany.
+        I have a background in French language teaching and translation and a passion for web development. I completed a one-year bootcamp and interned in 
+        a Berlin based real estate company as a Backend Engineer. I am familiar with HTML, CSS, JavaScript, React, NodeJS, Databases such as MongoDB and 
+        MySQL, PHP, Laravel, Kibana, Git and agile working conditions. In addition to writing my own code I like to pass on my knowledge and enjoy teaching 
+        and am currently volunteering as a web development teacher at ReDI School of Digital Integration where I am currently teaching a JavaScript course.
+        In addition to my passion for web development I have a love for Ethiopian cuisine and started my small online business 
+        <a href="https://www.melkamethiopia.com">MelkamEthiopia</a> to promote Ethiopian cooking in Germany.
           <br>
           <br>
-          Upon my arrival in Germany, in 2017 I have studied web-development in a bootcamp for more than one year, 
-          in parallel with my studies, I have set up myown online business <a href="https://www.melkamethiopia.com">melkamethiopia</a> in 2020. During my
-          time in the bootcamp, I have studied HTML, CSS, JAVASCRIPT, REACT, NODEJS AND DATABASES such us MONGODB AND
-          MYSQL. In addition to that, I have studied various frameworks by myself. 
-          <br>
-          <br>
-          From February to July 2022, I have worked in a berlin based real estate company as an intern, and, during my
-          internship I have studied php, laravel and various version control platforms, such us, KIBANA ... that I 
-          enjoyed learning and working using them. In addition to that, I have learned a great deal of agile working
-          condition with a daily meetup and ticketing system that we have applied on our day to day activity.
-        <br>
-        <br>
-          Since I always enjoy teaching and explaining, furthermore, considering that I have a long year of teaching experiecne
-          I have started voluneering as a web-development teacher since September 2022 in ReDI School of Digital 
-          Integration. Currently, I am teacing JAVASCRIPT courses two times a week in this school.
        
       </div>
 
