--- a/index.html
+++ b/index.html
@@ -52,16 +52,12 @@
     <!-- 2 -->
     <div class="text">
         <div class="text-wrap">
-            <h2 style="color: darkslategray;">
-                Language teacher turned full stack web developer. More than seven years of teaching experience, 
-                currently teaching coding to beginners ...
-            </h2>
-            <p style="font-size: 18px; color: white;">
-                Familiar with frontend and backend development, SQL and NoSQL Database Design, and Domain Driven 
-                Design (DDD) infrastructure. A quick learner and adept problem- solver, eager to further develop 
-                my full-stack expertise and pass on my passion for coding to motivated learners to collaborate 
-                and grow together.
-            </p>
+            <h3 style="color: darkslategray;">
+                Language teacher turned full stack web developer, currently teaching coding to beginners. Familiar with frontend and backend development, 
+                SQL and NoSQL Database Design, and Domain Driven Design (DDD) infrastructure. A quick learner and adept problem-solver, eager to further 
+                develop my full-stack expertise and pass on my passion for coding to motivated learners to collaborate and grow together.
+            </h3>
+          
         </div> 
     </div>
 </section>
