--- a/work.html
+++ b/work.html
@@ -40,6 +40,7 @@
         </div>
       </nav>
 
+      <h2 style="color: white; text-align: center; margin-top: 1%;">Please have a look at some of my projects:</h2>
       <!-- some project works --> 
       <div class="work_samples">
         <div ><a href="https://melkam22.github.io/shoppingWithJavaScript/index.html"><img src="images/shopping_basket.jpg" alt="basket" class="work_one"></a></div>
